--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Handlebars go in this file while javascript goes into the app.js file-->
   <meta charset="utf-8">
-  <title>Ember Starter Kit</title>
+  <title>Ember Starter Kit</title> 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -96,6 +96,8 @@
   <script src="js/libs/ember-1.5.1.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
+  <script src="socket.io/socket.io.js"></script>
+  <script src="js/libs/ember-data.js"></script>
   <script src="js/app.js"></script>
   <!-- to activate the test runner, add the "?test" query string parameter -->
   <script src="tests/runner.js"></script>
